--- a/product/i18n/hr.po
+++ b/product/i18n/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-09-24 12:57+0000\n"
+"PO-Revision-Date: 2013-09-25 10:05+0000\n"
 "Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-25 05:49+0000\n"
+"X-Launchpad-Export-Date: 2013-09-26 05:54+0000\n"
 "X-Generator: Launchpad (build 16771)\n"
 
 #. module: product
@@ -814,7 +814,7 @@ msgstr ""
 #. module: product
 #: view:res.partner:0
 msgid "Pricelists are managed on"
-msgstr ""
+msgstr "Cjenicima se upravlja"
 
 #. module: product
 #: field:product.category,child_id:0
@@ -969,7 +969,7 @@ msgstr "Tip cijene proizvoda"
 #. module: product
 #: field:product.product,message_is_follower:0
 msgid "Is a Follower"
-msgstr ""
+msgstr "Je pratitelj"
 
 #. module: product
 #: field:product.product,price_extra:0
@@ -1012,7 +1012,7 @@ msgstr ""
 #. module: product
 #: help:product.pricelist.version,date_start:0
 msgid "First valid date for the version."
-msgstr ""
+msgstr "Prvi važeći datum za verziju."
 
 #. module: product
 #: help:product.supplierinfo,delay:0
@@ -1372,7 +1372,7 @@ msgstr "Ova će se bilješka prikazati na zahtjevima za ponudu ..."
 #. module: product
 #: view:product.product:0
 msgid "Inventory"
-msgstr ""
+msgstr "Inventura"
 
 #. module: product
 #: field:product.product,seller_info_id:0
@@ -1727,7 +1727,7 @@ msgstr ""
 #. module: product
 #: selection:product.uom,uom_type:0
 msgid "Smaller than the reference Unit of Measure"
-msgstr ""
+msgstr "Manje od referentne jedinice mjere"
 
 #. module: product
 #: model:product.pricelist,name:product.list0
@@ -1743,7 +1743,7 @@ msgstr "Šifra artikla kod dobavljača"
 #: help:product.pricelist,active:0
 msgid ""
 "If unchecked, it will allow you to hide the pricelist without removing it."
-msgstr ""
+msgstr "Ako je odabrano, možete sakriti cjenik bez da ga pobrišete."
 
 #. module: product
 #: selection:product.ul,type:0
@@ -1821,7 +1821,7 @@ msgstr "Greška! Minimalna marža bi trebala biti manja od  maksimalne marže."
 #. module: product
 #: model:res.groups,name:product.group_uos
 msgid "Manage Secondary Unit of Measure"
-msgstr ""
+msgstr "Upravljanje sekudnarnim jedinicama mjere"
 
 #. module: product
 #: help:product.uom,rounding:0
@@ -1961,7 +1961,7 @@ msgstr "Duljina / udaljenost"
 #. module: product
 #: model:product.category,name:product.product_category_8
 msgid "Components"
-msgstr ""
+msgstr "Komponente"
 
 #. module: product
 #: field:product.product,code:0
@@ -1993,7 +1993,7 @@ msgstr "Indeks boje"
 #. module: product
 #: help:product.template,sale_ok:0
 msgid "Specify if the product can be selected in a sales order line."
-msgstr ""
+msgstr "Proizvod može biti odabran na prodajnom nalogu."
 
 #. module: product
 #: view:product.product:0
@@ -2051,6 +2051,19 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Pritisnite za kreiranje novog proizvoda.\n"
+"              </p><p>\n"
+"                Za sve što kupujete, bez obzira da li je to trgovačka roba,\n"
+"                potrošni materijal ili usluga, morate definirati proizvod.\n"
+"              </p><p>\n"
+"                Matični karton proizvoda sadrži detaljne informacije za "
+"poboljšavanje\n"
+"                procesa nabave: cijene, logistički podaci, računovodstveni "
+"podaci,\n"
+"                dobavljači, i td.\n"
+"              </p>\n"
+"            "
 
 #. module: product
 #: model:product.template,description_sale:product.product_product_44_product_template
@@ -2077,7 +2090,7 @@ msgstr ""
 #. module: product
 #: field:product.product,message_follower_ids:0
 msgid "Followers"
-msgstr ""
+msgstr "Pratitelji"
 
 #. module: product
 #: view:product.product:0
@@ -2163,6 +2176,8 @@ msgid ""
 "Consumable: Will not imply stock management for this product. \n"
 "Stockable product: Will imply stock management for this product."
 msgstr ""
+"Potrošni materijal: neće se voditi skladišno. \n"
+"Skladištivi proizvod: voditi će se skladišno."
 
 #. module: product
 #: help:product.pricelist.type,key:0
@@ -2184,6 +2199,15 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Pritisnite za kreiranje novog proizvoda.\n"
+"              </p><p>\n"
+"                Morate definirati proizvod za sve što kupujete ili "
+"prodajete,\n"
+"                bez obzira da li je to trgovačka roba, potrošni materijal "
+"ili usluga,\n"
+"              </p>\n"
+"            "
 
 #. module: product
 #: view:product.product:0
@@ -2324,6 +2348,22 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Pritisnite za kreiranje novog cjenika.\n"
+"              </p><p>\n"
+"                Cjenik sadrži pravila koja određuju nabavnu cijenu. "
+"Predefinirani cjenik\n"
+"                ima samo jedno pravilo, koristi se nabavna cijena definirana "
+"u matičnom \n"
+"                kartonu proizvoda, pa ne morate brinuti o dobavljačevim "
+"cjenicima u\n"
+"                jednostavnim konstalacijama.\n"
+"              </p><p>\n"
+"                Međutim, moguće je, također, importirati i kompleksne "
+"cjenike vaših dobavljača\n"
+"                koji ovise npr. o naručenim količinama ili akcijama.\n"
+"              </p>\n"
+"            "
 
 #. module: product
 #: selection:product.template,mes_type:0
@@ -2348,7 +2388,7 @@ msgstr "Min. marža prodajne cijene"
 #. module: product
 #: model:res.groups,name:product.group_uom
 msgid "Manage Multiple Units of Measure"
-msgstr ""
+msgstr "Upravljanje sa više jedinica mjere"
 
 #. module: product
 #: help:product.packaging,weight:0
@@ -2358,7 +2398,7 @@ msgstr "Ukupna težiranja pakiranja, palete ili kutije."
 #. module: product
 #: view:product.uom:0
 msgid "e.g: 1 * (this unit) = ratio * (reference unit)"
-msgstr ""
+msgstr "npr. 1 + (ova JM) = omjer * (referentna jedinica)"
 
 #. module: product
 #: model:product.template,description:product.product_product_25_product_template
@@ -2405,6 +2445,15 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Pritisnite za kreiranje nove jedinice mjere.\n"
+"              </p><p>\n"
+"                Potrebno je definirati koeficijent pretvorbe za više "
+"jedinica mjere\n"
+"                unutar iste kategorije. Npr. metre u centimetre, litre u "
+"decilitre i sl.\n"
+"              </p>\n"
+"            "
 
 #. module: product
 #: model:product.template,name:product.product_product_11_product_template
@@ -2516,6 +2565,20 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Pritisnite za kreiranje novog cjenika..\n"
+"              </p><p>\n"
+"                Cjenik sadrži pravila koja određuju prodajnu cijenu.\n"
+"                </p><p>\n"
+"                Cjenik može imati više verzija  (2012, 2013, Akcijski "
+"cjenik\n"
+"                prosinac 2013, i sl.), a svaka verzija može sadržavati "
+"drugačija\n"
+"                pravila (npr. prodajna cijena za određenu kategoriju može se "
+"definirati\n"
+"                kao cijena dobavljača pomnožena sa 1.80).\n"
+"              </p>\n"
+"            "
 
 #. module: product
 #: model:ir.model,name:product.model_product_template
@@ -2589,6 +2652,9 @@ msgid ""
 "Conversion between Units of Measure can only occur if they belong to the "
 "same category. The conversion will be made based on the ratios."
 msgstr ""
+"Konverzija jedinica mjere može se vršiti samo za jedinice mjere koje "
+"pripadaju istoj kategoriji. Konverzija će se izvršiti temeljem omjera "
+"jedinica mjere."
 
 #. module: product
 #: constraint:product.category:0
