--- a/purchase/i18n/hr.po
+++ b/purchase/i18n/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-09-19 14:08+0000\n"
+"PO-Revision-Date: 2013-09-25 13:14+0000\n"
 "Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-20 06:01+0000\n"
-"X-Generator: Launchpad (build 16765)\n"
+"X-Launchpad-Export-Date: 2013-09-26 05:54+0000\n"
+"X-Generator: Launchpad (build 16771)\n"
 
 #. module: purchase
 #: model:res.groups,name:purchase.group_analytic_accounting
@@ -839,7 +839,7 @@ msgstr "Zahtjev za ponudom"
 #: model:ir.actions.act_window,name:purchase.action_picking_tree4_picking_to_invoice
 #: model:ir.ui.menu,name:purchase.menu_action_picking_tree4_picking_to_invoice
 msgid "On Incoming Shipments"
-msgstr ""
+msgstr "U dolaznim pošiljkama"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -1134,7 +1134,7 @@ msgstr "Nepročitane poruke"
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_purchase_uom_categ_form_action
 msgid "Unit of Measure Categories"
-msgstr "kategorije JM"
+msgstr "Kategorije JM"
 
 #. module: purchase
 #: view:purchase.order:0
@@ -1449,7 +1449,7 @@ msgstr "Na stavkama naloga za nabavu"
 #. module: purchase
 #: report:purchase.quotation:0
 msgid "TVA:"
-msgstr "TVA:"
+msgstr "OIB:"
 
 #. module: purchase
 #: help:purchase.order,picking_ids:0
@@ -1794,7 +1794,7 @@ msgstr "Greška!"
 #. module: purchase
 #: report:purchase.order:0
 msgid "Net Total :"
-msgstr "Neto zbroj :"
+msgstr "Neto :"
 
 #. module: purchase
 #: help:purchase.order,state:0
@@ -1843,7 +1843,7 @@ msgstr "Ponovo šalji nalog"
 #. module: purchase
 #: report:purchase.order:0
 msgid "Net Price"
-msgstr "Netto cijena"
+msgstr "Iznos"
 
 #. module: purchase
 #: model:process.node,name:purchase.process_node_confirmpurchaseorder0
@@ -2138,7 +2138,7 @@ msgstr "Opis"
 #. module: purchase
 #: report:purchase.quotation:0
 msgid "Expected Delivery address:"
-msgstr "Expected Delivery address:"
+msgstr "Očekivana adresa dostave:"
 
 #. module: purchase
 #: model:email.template,body_html:purchase.email_template_edi_purchase
@@ -2230,7 +2230,7 @@ msgstr "Veljača"
 #: model:ir.actions.act_window,name:purchase.action_invoice_pending
 #: model:ir.ui.menu,name:purchase.menu_procurement_management_pending_invoice
 msgid "On Draft Invoices"
-msgstr "u nacrtima računa"
+msgstr "U nacrtima računa"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_purchase_order_report_all
