--- a/account/i18n/hr.po
+++ b/account/i18n/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-09-25 13:01+0000\n"
+"PO-Revision-Date: 2013-09-26 14:26+0000\n"
 "Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-26 05:54+0000\n"
-"X-Generator: Launchpad (build 16771)\n"
+"X-Launchpad-Export-Date: 2013-09-27 06:16+0000\n"
+"X-Generator: Launchpad (build 16774)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
@@ -348,7 +348,7 @@ msgstr ""
 #. module: account
 #: model:ir.model,name:account.model_account_unreconcile
 msgid "Account Unreconcile"
-msgstr "Account Unreconcile"
+msgstr ""
 
 #. module: account
 #: field:account.config.settings,module_account_budget:0
@@ -430,7 +430,7 @@ msgstr "Datum kreiranja"
 #. module: account
 #: view:account.invoice:0
 msgid "Cancel Invoice"
-msgstr "Storniraj račun"
+msgstr "Otkaži račun"
 
 #. module: account
 #: selection:account.journal,type:0
@@ -499,7 +499,9 @@ msgstr "Predložak kontnog plana"
 #. module: account
 #: selection:account.invoice.refund,filter_refund:0
 msgid "Modify: create refund, reconcile and create a new draft invoice"
-msgstr "Uredi: napravi povrat, zatvori ili kreiraj novi nacrt računa"
+msgstr ""
+"Ispravi: kreiraj storno dokument, zatvori ga te kreiraj novi račun u statusu "
+"'Nacrt'"
 
 #. module: account
 #: help:account.config.settings,tax_calculation_rounding_method:0
@@ -831,7 +833,7 @@ msgstr "Podesite vaše bankovne račune"
 #. module: account
 #: view:account.invoice.refund:0
 msgid "Create Refund"
-msgstr "Napravi povratnicu"
+msgstr "Storniraj dokument"
 
 #. module: account
 #: constraint:account.move.line:0
@@ -909,7 +911,7 @@ msgstr "Analitičke stavke"
 #. module: account
 #: field:account.invoice.refund,filter_refund:0
 msgid "Refund Method"
-msgstr "Način povrata"
+msgstr "Način storniranja"
 
 #. module: account
 #: model:ir.ui.menu,name:account.menu_account_report
@@ -5144,7 +5146,7 @@ msgstr "Opišite kad uzimate novac iz blagajne :"
 #: selection:account.invoice.report,state:0
 #: selection:report.invoice.created,state:0
 msgid "Cancelled"
-msgstr "Otkazani"
+msgstr "Otkazano"
 
 #. module: account
 #: code:addons/account/account.py:1903
@@ -5225,7 +5227,7 @@ msgstr "Porez prodaje"
 #. module: account
 #: view:account.move:0
 msgid "Cancel Entry"
-msgstr ""
+msgstr "Otkaži unos"
 
 #. module: account
 #: field:account.tax,ref_tax_code_id:0
@@ -5419,7 +5421,7 @@ msgstr "Izračunaj"
 #. module: account
 #: view:account.invoice:0
 msgid "Additional notes..."
-msgstr ""
+msgstr "Dodatna napomena ..."
 
 #. module: account
 #: field:account.tax,type_tax_use:0
@@ -5833,7 +5835,7 @@ msgstr "Porez na podređene"
 #. module: account
 #: field:account.journal,update_posted:0
 msgid "Allow Cancelling Entries"
-msgstr "Dozvoli odažuriranje knjiženja"
+msgstr "Dozvoli otkazivanje knjiženja"
 
 #. module: account
 #: code:addons/account/wizard/account_use_model.py:44
@@ -7221,7 +7223,7 @@ msgstr "Stavke: "
 #. module: account
 #: help:res.partner.bank,currency_id:0
 msgid "Currency of the related account journal."
-msgstr ""
+msgstr "Valuta povezanog računovodstvenog dnevnika"
 
 #. module: account
 #: constraint:account.move.line:0
@@ -7972,6 +7974,11 @@ msgid ""
 "                                    with the invoice. You will not be able "
 "to modify the credit note."
 msgstr ""
+"Koristite ovu opciju ako želite stornirati račun.\n"
+"                                    Kreirati će se novi storno dokument koji "
+"će zatvoriti ovaj \n"
+"                                    račun. Stornirani dokument ne možete "
+"modificirati."
 
 #. module: account
 #: help:account.partner.reconcile.process,next_partner_id:0
@@ -8410,6 +8417,8 @@ msgid ""
 "You cannot delete an invoice which is not draft or cancelled. You should "
 "refund it instead."
 msgstr ""
+"Nije moguće pobrisati račun koji nije u statusu nacrt ili otkazan. Možete ga "
+"samo stornirati."
 
 #. module: account
 #: model:ir.ui.menu,name:account.menu_finance_legal_statement
@@ -8690,7 +8699,7 @@ msgstr "Iznos ovog poreza dodati osnovici prije izračuna slijedećeg poreza."
 #: code:addons/account/account.py:3196
 #, python-format
 msgid "Purchase Refund Journal"
-msgstr "Knjiga odobrenja dobavljača"
+msgstr "Dnevnik odobrenja dobavljača"
 
 #. module: account
 #: code:addons/account/account.py:1333
@@ -8831,7 +8840,7 @@ msgstr "Tel.:"
 #. module: account
 #: field:account.account,company_currency_id:0
 msgid "Company Currency"
-msgstr "Valuta organizacije"
+msgstr "Valuta tvrtke"
 
 #. module: account
 #: field:account.aged.trial.balance,chart_account_id:0
@@ -8909,6 +8918,13 @@ msgid ""
 "invoice will be created \n"
 "                                    so that you can edit it."
 msgstr ""
+"Koristite ovu opciju ako želite stornirati račun i kreirati novi u istom "
+"koraku.\n"
+"                                    Kreirati će se novi storno dokument koji "
+"će zatvoriti ovaj \n"
+"                                    račun, te novi račun u statusu 'Nacrt' "
+"kojega možete  \n"
+"                                    editirati."
 
 #. module: account
 #: model:process.transition,name:account.process_transition_filestatement0
@@ -9007,7 +9023,7 @@ msgstr "Fiscalyear Close state"
 #. module: account
 #: field:account.invoice.refund,journal_id:0
 msgid "Refund Journal"
-msgstr "Knjiga odobrenja"
+msgstr "Dnevnik povrata"
 
 #. module: account
 #: report:account.account.balance:0
@@ -9526,6 +9542,10 @@ msgid ""
 "chart\n"
 "                        of accounts."
 msgstr ""
+"Nakon potvrđivanja računa u statusu 'Nacrt' nećete ih više moći\n"
+"                        editirati. Računi će dobiti jedinstveni broj te će "
+"se \n"
+"                        kreirati stavke u knjiženja."
 
 #. module: account
 #: model:process.node,note:account.process_node_bankstatement0
