--- a/procurement/i18n/hr.po
+++ b/procurement/i18n/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-09-25 14:36+0000\n"
+"PO-Revision-Date: 2013-09-26 13:29+0000\n"
 "Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-26 05:54+0000\n"
-"X-Generator: Launchpad (build 16771)\n"
+"X-Launchpad-Export-Date: 2013-09-27 06:16+0000\n"
+"X-Generator: Launchpad (build 16774)\n"
 
 #. module: procurement
 #: model:ir.ui.menu,name:procurement.menu_stock_sched
@@ -200,12 +200,12 @@ msgstr ""
 #. module: procurement
 #: help:procurement.order,message_unread:0
 msgid "If checked new messages require your attention."
-msgstr ""
+msgstr "Ako je odabrano, nove poruke zahtijevaju Vašu pažnju."
 
 #. module: procurement
 #: view:procurement.order.compute.all:0
 msgid "Scheduler Parameters"
-msgstr ""
+msgstr "Parametri zakazanih radnji"
 
 #. module: procurement
 #: model:ir.model,name:procurement.model_stock_move
@@ -229,6 +229,8 @@ msgid ""
 "Holds the Chatter summary (number of messages, ...). This summary is "
 "directly in html format in order to be inserted in kanban views."
 msgstr ""
+"Sadrži sažetak konverzacije (broj poruka..). Ovaj sažetak je u html formatu "
+"da bi mogao biti ubačen u kanban pogled."
 
 #. module: procurement
 #: selection:procurement.order,state:0
@@ -299,13 +301,13 @@ msgstr "Zahtjevi za nabavkom koje treba procesirati"
 #. module: procurement
 #: model:ir.model,name:procurement.model_stock_warehouse_orderpoint
 msgid "Minimum Inventory Rule"
-msgstr ""
+msgstr "Pravilo minimalne zalihe"
 
 #. module: procurement
 #: code:addons/procurement/procurement.py:370
 #, python-format
 msgid "Procurement '%s' is in exception: "
-msgstr ""
+msgstr "Nabavka  '%s' je u iznimci: "
 
 #. module: procurement
 #: field:procurement.order,priority:0
@@ -461,7 +463,7 @@ msgstr ""
 #. module: procurement
 #: view:procurement.order:0
 msgid "To Fix"
-msgstr ""
+msgstr "Za popraviti"
 
 #. module: procurement
 #: view:procurement.order:0
@@ -471,7 +473,7 @@ msgstr "Iznimke"
 #. module: procurement
 #: model:process.node,note:procurement.process_node_serviceonorder0
 msgid "Assignment from Production or Purchase Order."
-msgstr ""
+msgstr "Prijenos iz proizvodnje ili naloga za nabavu."
 
 #. module: procurement
 #: model:ir.model,name:procurement.model_mrp_property
@@ -492,7 +494,7 @@ msgstr ""
 #. module: procurement
 #: view:procurement.order:0
 msgid "e.g. SO005"
-msgstr ""
+msgstr "npr. SO005"
 
 #. module: procurement
 #: field:stock.warehouse.orderpoint,procurement_draft_ids:0
