--- a/purchase/i18n/hr.po
+++ b/purchase/i18n/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-09-25 13:14+0000\n"
+"PO-Revision-Date: 2013-09-26 12:08+0000\n"
 "Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-26 05:54+0000\n"
-"X-Generator: Launchpad (build 16771)\n"
+"X-Launchpad-Export-Date: 2013-09-27 06:16+0000\n"
+"X-Generator: Launchpad (build 16774)\n"
 
 #. module: purchase
 #: model:res.groups,name:purchase.group_analytic_accounting
@@ -1522,21 +1522,16 @@ msgid ""
 "            "
 msgstr ""
 "<p class=\"oe_view_nocontent_create\">\n"
-"                                                           Click to create a "
-"request for quotation.\n"
-"                                                     </p><p>\n"
-"                                                    Ponuda sadrži povijest "
-"komunikacije/pregovaranja\n"
-"                                                    koju ste vodili sa "
-"dobavljačem. Jednom kad se potvrdi\n"
-"                                                    zahtjev za ponudom "
-"prelazi u nalog za nabavu.\n"
-"                                                    </p><p>\n"
-"                                                   Večina prijedloga za "
-"nalozima za nabavu je automatski \n"
-"                                                   generirana od OpenERPa "
-"bazirano na potrebama skladišta\n"
-"                                                   </p>\n"
+"                Pritisnite za kreiranje zahtjeva za ponudom.\n"
+"              </p><p>\n"
+"                Ponuda sadrži povijest komunikacije/pregovora sa\n"
+"                dobavljačem. Nakon potvrđivanja zahtjev za ponudom\n"
+"                se pretvara u nalog za nabavu.\n"
+"              </p><p>\n"
+"                Većina prijedloga za nalog za nabavu OpenERP kreira "
+"automatski\n"
+"                temeljem pravila vođenja zaliha i potreba za zalihom.\n"
+"              </p>\n"
 "            "
 
 #. module: purchase
@@ -2331,6 +2326,18 @@ msgid ""
 "                </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                   Ovaj dobaljač nema niti jedan nalog za nabavu. Pritisnite "
+"za kreiranje.\n"
+"                   novog zahtjeva za ponudom (RfQ).\n"
+"                   </p><p>\n"
+"                   Zahtjev za ponudom predstavlja prvi korak u procesu "
+"nabave. Kada se jednom \n"
+"                   pretvori u nalog za nabavu, moći ćete kontrolirati prijem "
+"proizvoda\n"
+"                   kao i ulazne račune dobavljača.\n"
+"                </p>\n"
+"            "
 
 #. module: purchase
 #: view:purchase.report:0
