--- a/account/i18n/fi.po
+++ b/account/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-10-12 21:54+0000\n"
+"PO-Revision-Date: 2013-10-13 17:09+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-13 05:37+0000\n"
+"X-Launchpad-Export-Date: 2013-10-14 05:33+0000\n"
 "X-Generator: Launchpad (build 16799)\n"
 
 #. module: account
@@ -1666,17 +1666,17 @@ msgstr ""
 #. module: account
 #: view:account.invoice.refund:0
 msgid "Credit Note"
-msgstr "Luottoilmoitus"
+msgstr "Hyvityslasku"
 
 #. module: account
 #: view:account.config.settings:0
 msgid "eInvoicing & Payments"
-msgstr ""
+msgstr "sähköinen laskutus ja maksut"
 
 #. module: account
 #: view:account.analytic.cost.ledger.journal.report:0
 msgid "Cost Ledger for Period"
-msgstr ""
+msgstr "Jakson kulureskontra"
 
 #. module: account
 #: view:account.entries.report:0
@@ -1693,13 +1693,13 @@ msgstr ""
 #. module: account
 #: model:ir.model,name:account.model_temp_range
 msgid "A Temporary table used for Dashboard view"
-msgstr ""
+msgstr "Valvontanäytön käyttämä väliaikainen taulu"
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_invoice_tree4
 #: model:ir.ui.menu,name:account.menu_action_invoice_tree4
 msgid "Supplier Refunds"
-msgstr "Toimittajan hyvitykset"
+msgstr "Hyvitykset toimittajalta"
 
 #. module: account
 #: report:account.invoice:0
@@ -1739,7 +1739,7 @@ msgstr "Toistuvat viennit"
 #. module: account
 #: model:ir.model,name:account.model_account_fiscal_position_template
 msgid "Template for Fiscal Position"
-msgstr "Malli talouskannalle"
+msgstr "Malli rahoitusasemalle"
 
 #. module: account
 #: view:account.subscription:0
@@ -1769,12 +1769,12 @@ msgstr ""
 #. module: account
 #: view:account.bank.statement:0
 msgid "Search Bank Statements"
-msgstr "Hae pankkitiliotteita"
+msgstr "Etsi pankkitiliotteita"
 
 #. module: account
 #: view:account.move.line:0
 msgid "Unposted Journal Items"
-msgstr ""
+msgstr "Kirjaamattommat päiväkirjamerkinnät"
 
 #. module: account
 #: view:account.chart.template:0
