--- a/sale/i18n/ja.po
+++ b/sale/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-10-19 05:26+0000\n"
+"PO-Revision-Date: 2013-10-19 05:51+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-19 05:28+0000\n"
+"X-Launchpad-Export-Date: 2013-10-20 05:05+0000\n"
 "X-Generator: Launchpad (build 16807)\n"
 
 #. module: sale
@@ -640,7 +640,7 @@ msgstr "オーダー番号"
 #: view:sale.order:0
 #: field:sale.order,order_line:0
 msgid "Order Lines"
-msgstr "オーダー行"
+msgstr "受注明細"
 
 #. module: sale
 #: field:account.config.settings,module_sale_analytic_plans:0
@@ -1068,7 +1068,7 @@ msgstr "見積の確認"
 #: model:ir.actions.act_window,name:sale.action_order_line_tree2
 #: model:ir.ui.menu,name:sale.menu_invoicing_sales_order_lines
 msgid "Order Lines to Invoice"
-msgstr ""
+msgstr "請求対象受注明細"
 
 #. module: sale
 #: view:sale.order:0
@@ -1993,7 +1993,7 @@ msgstr "1月"
 #. module: sale
 #: model:ir.actions.act_window,name:sale.action_orders_in_progress
 msgid "Sales Order in Progress"
-msgstr "進行中の受注オーダー"
+msgstr "進行中の受注"
 
 #. module: sale
 #: field:sale.config.settings,timesheet:0
@@ -2003,7 +2003,7 @@ msgstr ""
 #. module: sale
 #: help:sale.order,origin:0
 msgid "Reference of the document that generated this sales order request."
-msgstr "この受注オーダー要求を生成したドキュメントへの参照"
+msgstr "この受注の生成の基となったドキュメント"
 
 #. module: sale
 #: view:sale.report:0
@@ -2029,12 +2029,12 @@ msgstr "日付順"
 #. module: sale
 #: model:process.node,note:sale.process_node_order0
 msgid "Confirmed sales order to invoice."
-msgstr "請求する確認済受注オーダー"
+msgstr "請求対象の確定受注"
 
 #. module: sale
 #: model:mail.message.subtype,name:sale.mt_order_confirmed
 msgid "Sales Order Confirmed"
-msgstr ""
+msgstr "確定受注"
 
 #. module: sale
 #: selection:sale.order.line,type:0
@@ -2050,7 +2050,7 @@ msgstr "価格リストがありません： "
 #. module: sale
 #: view:sale.order:0
 msgid "Sales Order "
-msgstr ""
+msgstr "受注 "
 
 #. module: sale
 #: field:sale.config.settings,module_account_analytic_analysis:0
@@ -2118,7 +2118,7 @@ msgstr ""
 #: view:sale.order:0
 #: view:sale.order.line:0
 msgid "Search Sales Order"
-msgstr "受注オーダーの検索"
+msgstr "受注検索"
 
 #. module: sale
 #: field:sale.advance.payment.inv,advance_payment_method:0
@@ -2128,7 +2128,7 @@ msgstr ""
 #. module: sale
 #: view:sale.order.line:0
 msgid "Confirmed sales order lines, not yet delivered"
-msgstr ""
+msgstr "確定済・未出荷の受注明細"
 
 #. module: sale
 #: field:sale.order.line,sequence:0
