--- a/account_analytic_default/i18n/bs.po
+++ b/account_analytic_default/i18n/bs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-10-27 22:30+0000\n"
+"Last-Translator: Bosko Stojakovic <bluesoft83@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:46+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-10-28 05:42+0000\n"
+"X-Generator: Launchpad (build 16810)\n"
 
 #. module: account_analytic_default
 #: model:ir.actions.act_window,name:account_analytic_default.analytic_rule_action_partner
@@ -27,12 +27,12 @@ msgstr "Pravila analitike"
 #. module: account_analytic_default
 #: view:account.analytic.default:0
 msgid "Group By..."
-msgstr ""
+msgstr "Grupiši po..."
 
 #. module: account_analytic_default
 #: help:account.analytic.default,date_stop:0
 msgid "Default end date for this Analytic Account."
-msgstr ""
+msgstr "Predodređeni datum završetka za ovaj analitički konto"
 
 #. module: account_analytic_default
 #: help:account.analytic.default,product_id:0
@@ -45,7 +45,7 @@ msgstr ""
 #. module: account_analytic_default
 #: model:ir.model,name:account_analytic_default.model_stock_picking
 msgid "Picking List"
-msgstr ""
+msgstr "Lista prikupljanja proizvoda"
 
 #. module: account_analytic_default
 #: view:account.analytic.default:0
@@ -109,7 +109,7 @@ msgstr ""
 #. module: account_analytic_default
 #: model:ir.model,name:account_analytic_default.model_account_invoice_line
 msgid "Invoice Line"
-msgstr ""
+msgstr "Stavka fakture"
 
 #. module: account_analytic_default
 #: help:account.analytic.default,company_id:0
@@ -128,17 +128,17 @@ msgstr "Analitičko konto"
 #. module: account_analytic_default
 #: model:ir.model,name:account_analytic_default.model_account_analytic_default
 msgid "Analytic Distribution"
-msgstr ""
+msgstr "Analitička raspodjela"
 
 #. module: account_analytic_default
 #: help:account.analytic.default,date_start:0
 msgid "Default start date for this Analytic Account."
-msgstr ""
+msgstr "Zadani datum početka za ovaj analitički konto"
 
 #. module: account_analytic_default
 #: view:account.analytic.default:0
 msgid "Accounts"
-msgstr ""
+msgstr "Konta"
 
 #. module: account_analytic_default
 #: view:account.analytic.default:0
@@ -156,8 +156,9 @@ msgstr "Početni datum"
 msgid ""
 "Gives the sequence order when displaying a list of analytic distribution"
 msgstr ""
+"Definira redosljed sekvence prilikom prikazivanja analitičkih raspodjela"
 
 #. module: account_analytic_default
 #: model:ir.model,name:account_analytic_default.model_sale_order_line
 msgid "Sales Order Line"
-msgstr ""
+msgstr "Stavka prodajne narudžbe"
