--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-10-26 14:56+0000\n"
+"PO-Revision-Date: 2013-10-27 10:08+0000\n"
 "Last-Translator: kohji katayama <kohji.jyoji4113@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-27 06:13+0000\n"
+"X-Launchpad-Export-Date: 2013-10-28 05:42+0000\n"
 "X-Generator: Launchpad (build 16810)\n"
 
 #. module: stock
@@ -32,7 +32,7 @@ msgid ""
 "Allow to manage several variants per product. As an example, if you  sell T-"
 "Shirts, for the same \"Linux T-Shirt\", you may have variants on  sizes or "
 "colors; S, M, L, XL, XXL."
-msgstr ""
+msgstr "製品ごとの型式管理を許可する。例：「リナックス T-シャツ」を販売する場合、色やサイズ(S、M、L、XL、XXL)等の型式を保持する。"
 
 #. module: stock
 #: model:ir.model,name:stock.model_stock_move_split_lines
@@ -79,7 +79,7 @@ msgstr "新しいパックに入れる"
 #: view:stock.tracking:0
 #, python-format
 msgid "Upstream Traceability"
-msgstr "上流追跡能力"
+msgstr "フォワードトレース"
 
 #. module: stock
 #: field:stock.picking,date_done:0
@@ -140,30 +140,30 @@ msgstr "棚卸制御"
 msgid ""
 "Internal reference number in case it differs from the manufacturer's serial "
 "number"
-msgstr "製造シリアル番号とは異なる場合に備えた内部参照番号"
+msgstr "製造シリアル番号とは別に設定する内部参照番号"
 
 #. module: stock
 #: code:addons/stock/wizard/stock_fill_inventory.py:59
 #, python-format
 msgid "You cannot perform this operation on more than one Stock Inventories."
-msgstr "１つの棚卸を超えて、この操作の実行はできません。"
+msgstr "この操作は複数の棚卸在庫に対して実行できません。"
 
 #. module: stock
 #: code:addons/stock/wizard/stock_change_product_qty.py:91
 #, python-format
 msgid "Quantity cannot be negative."
-msgstr "数量は交渉不可"
+msgstr "負の数は入力できません。"
 
 #. module: stock
 #: view:stock.picking:0
 #: view:stock.picking.in:0
 msgid "Picking list"
-msgstr "集荷リスト"
+msgstr "ピッキングリスト"
 
 #. module: stock
 #: view:stock.inventory:0
 msgid "e.g. Annual inventory"
-msgstr ""
+msgstr "[例] 年次棚卸"
 
 #. module: stock
 #: report:lot.stock.overview:0
@@ -199,7 +199,7 @@ msgstr "日"
 #: model:ir.actions.act_window,name:stock.action_inventory_form
 #: model:ir.ui.menu,name:stock.menu_action_inventory_form
 msgid "Physical Inventories"
-msgstr "実在庫"
+msgstr "実地棚卸"
 
 #. module: stock
 #: selection:stock.location.product,type:0
@@ -487,7 +487,7 @@ msgstr ""
 #: report:stock.picking.list:0
 #: selection:stock.picking.out,state:0
 msgid "Waiting Availability"
-msgstr "利用可能待ち"
+msgstr "入荷待ち"
 
 #. module: stock
 #: selection:report.stock.inventory,state:0
@@ -497,7 +497,7 @@ msgstr "利用可能待ち"
 #: view:stock.production.lot:0
 #: field:stock.production.lot,stock_available:0
 msgid "Available"
-msgstr "利用可能"
+msgstr "出荷可能"
 
 #. module: stock
 #: view:stock.picking:0
@@ -576,7 +576,7 @@ msgstr "場所のタイプ"
 #. module: stock
 #: model:ir.actions.act_window,name:stock.action_inventory_form_draft
 msgid "Draft Physical Inventories"
-msgstr "実在庫のドラフト"
+msgstr "仮棚卸"
 
 #. module: stock
 #: code:addons/stock/stock.py:1777
@@ -2807,7 +2807,7 @@ msgstr "7月"
 #. module: stock
 #: view:report.stock.lines.date:0
 msgid "Consumable"
-msgstr "売り切り品"
+msgstr "消耗品"
 
 #. module: stock
 #: model:ir.actions.act_window,help:stock.action_stock_line_date
