--- a/account_analytic_default/i18n/bs.po
+++ b/account_analytic_default/i18n/bs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-10-27 22:30+0000\n"
+"PO-Revision-Date: 2013-10-28 09:46+0000\n"
 "Last-Translator: Bosko Stojakovic <bluesoft83@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-28 05:42+0000\n"
-"X-Generator: Launchpad (build 16810)\n"
+"X-Launchpad-Export-Date: 2013-10-29 05:14+0000\n"
+"X-Generator: Launchpad (build 16818)\n"
 
 #. module: account_analytic_default
 #: model:ir.actions.act_window,name:account_analytic_default.analytic_rule_action_partner
@@ -41,6 +41,9 @@ msgid ""
 "default (e.g. create new customer invoice or Sales order if we select this "
 "product, it will automatically take this as an analytic account)"
 msgstr ""
+"Odaberite proizvod koji će koristiti analitički konto specifiran u "
+"analitički zadatom (npr.: kreiraj novu fakturu kupca ili prodajnu narudžbu "
+"ako odaberemo ovaj proizvod, automatski će ovo uzeti kao analitički konto)"
 
 #. module: account_analytic_default
 #: model:ir.model,name:account_analytic_default.model_stock_picking
@@ -65,6 +68,9 @@ msgid ""
 "default (e.g. create new customer invoice or Sales order if we select this "
 "partner, it will automatically take this as an analytic account)"
 msgstr ""
+"Odaberite partnera koji će koristiti analitički konto specifiran u "
+"analitički zadatom (npr.: kreiraj novu fakturu kupcu ili prodajnu narudžbu "
+"ako odaberemo ovog partnera, automatski će uzeti ovo kao analitički konto)"
 
 #. module: account_analytic_default
 #: view:account.analytic.default:0
@@ -105,6 +111,8 @@ msgstr "Redoslijed"
 msgid ""
 "Select a user which will use analytic account specified in analytic default."
 msgstr ""
+"Odaberite korisnika koji će koristiti analitički konto specifiran u "
+"analitički zadatom."
 
 #. module: account_analytic_default
 #: model:ir.model,name:account_analytic_default.model_account_invoice_line
@@ -118,6 +126,9 @@ msgid ""
 "default (e.g. create new customer invoice or Sales order if we select this "
 "company, it will automatically take this as an analytic account)"
 msgstr ""
+"Odaberite kompaniju koja će koristiti analitički konto specifiran u "
+"analitički zadatom (npr.: kreiraj novu fakturu kupcu ili prodajnu narudžbu "
+"ako odaberemo ovu kompaniju, automatski će uzeti ovo kao analitički konto)"
 
 #. module: account_analytic_default
 #: view:account.analytic.default:0
