Launchpad automatic translations update.

--- a/purchase/i18n/ja.po
+++ b/purchase/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-06 08:58+0000\n"
+"PO-Revision-Date: 2013-11-07 10:31+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-07 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-08 06:26+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: purchase
@@ -1440,6 +1440,16 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                見積依頼の作成はこちらをクリック。\n"
+"              </p><p>\n"
+"                見積依頼は仕入先との調整や交渉の経緯を含むドキュメントです。\n"
+"                見積依頼は「確認」により発注に 変換されます。\n"
+"              </p><p>\n"
+"                見積依頼は発注提案の位置付けで、需給状況に応じてOpenERPより\n"
+"                自動生成することが可能です。\n"
+"              </p>\n"
+"            "
 
 #. module: purchase
 #: model:process.transition,note:purchase.process_transition_approvingpurchaseorder0
