--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-05 15:32+0000\n"
+"PO-Revision-Date: 2013-11-08 01:49+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:50+0000\n"
+"X-Launchpad-Export-Date: 2013-11-08 06:25+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -733,7 +733,7 @@ msgstr "勘定共通取引先レポート"
 #. module: account
 #: field:account.fiscalyear.close,period_id:0
 msgid "Opening Entries Period"
-msgstr "開始エントリーの期間"
+msgstr "期初仕訳期間"
 
 #. module: account
 #: model:ir.model,name:account.model_account_journal_period
@@ -1864,7 +1864,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:account.action_report_account_type_sales_tree_all
 #: view:report.account_type.sales:0
 msgid "Sales by Account Type"
-msgstr "アカウントタイプ別売上"
+msgstr "勘定タイプ別売上"
 
 #. module: account
 #: model:account.payment.term,name:account.account_payment_term_15days
@@ -4692,7 +4692,7 @@ msgstr "オンライン支払を受けるためのPayPalユーザ名（通常は
 #: code:addons/account/report/common_report_header.py:68
 #, python-format
 msgid "All Posted Entries"
-msgstr "全ての記帳済エントリー"
+msgstr "全記帳済エントリ"
 
 #. module: account
 #: field:report.aged.receivable,name:0
@@ -4713,12 +4713,12 @@ msgstr ""
 #: code:addons/account/wizard/account_fiscalyear_close.py:41
 #, python-format
 msgid "End of Fiscal Year Entry"
-msgstr "会計年度エントリーの最後"
+msgstr "会計年度締仕訳"
 
 #. module: account
 #: selection:account.move.line,state:0
 msgid "Balanced"
-msgstr ""
+msgstr "貸借一致"
 
 #. module: account
 #: model:process.node,note:account.process_node_importinvoice0
@@ -4737,7 +4737,7 @@ msgstr ""
 #: view:account.move:0
 #: view:account.move.line:0
 msgid "Add an internal note..."
-msgstr ""
+msgstr "内部注記を追加..."
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_wizard_multi_chart
@@ -4943,7 +4943,7 @@ msgstr ""
 #: selection:account.invoice.report,state:0
 #: selection:report.invoice.created,state:0
 msgid "Cancelled"
-msgstr "キャンセル済"
+msgstr "取消済"
 
 #. module: account
 #: code:addons/account/account.py:1903
@@ -5002,7 +5002,7 @@ msgstr "確認済"
 #. module: account
 #: report:account.invoice:0
 msgid "Cancelled Invoice"
-msgstr "キャンセル済請求書"
+msgstr "取消済請求書"
 
 #. module: account
 #: view:account.invoice:0
@@ -5022,7 +5022,7 @@ msgstr ""
 #. module: account
 #: view:account.move:0
 msgid "Cancel Entry"
-msgstr ""
+msgstr "記帳取消"
 
 #. module: account
 #: field:account.tax,ref_tax_code_id:0
@@ -5273,7 +5273,7 @@ msgstr "アカウントのタイプ別残高"
 #. module: account
 #: view:account.fiscalyear.close:0
 msgid "Generate Fiscal Year Opening Entries"
-msgstr "会計年度開始エントリーの生成"
+msgstr "会計年度期初仕訳の生成"
 
 #. module: account
 #: model:res.groups,name:account.group_account_user
@@ -5300,7 +5300,7 @@ msgstr "グループ請求書行"
 #. module: account
 #: view:account.automatic.reconcile:0
 msgid "Close"
-msgstr "閉じる"
+msgstr "完了済"
 
 #. module: account
 #: field:account.bank.statement.line,move_ids:0
@@ -5396,7 +5396,7 @@ msgstr "分析残高 -"
 #: field:account.vat.declaration,target_move:0
 #: field:accounting.report,target_move:0
 msgid "Target Moves"
-msgstr "ターゲットの移動"
+msgstr "対象仕訳"
 
 #. module: account
 #: code:addons/account/account.py:1454
@@ -5623,7 +5623,7 @@ msgstr "子の税金"
 #. module: account
 #: field:account.journal,update_posted:0
 msgid "Allow Cancelling Entries"
-msgstr "エントリーのキャンセル許可"
+msgstr "エントリの取消許可"
 
 #. module: account
 #: code:addons/account/wizard/account_use_model.py:44
@@ -6035,7 +6035,7 @@ msgstr "仕訳項目"
 #: model:ir.actions.act_window,name:account.action_account_fiscalyear_close
 #: model:ir.ui.menu,name:account.menu_wizard_fy_close
 msgid "Generate Opening Entries"
-msgstr "開始エントリーの生成"
+msgstr "期初仕訳生成"
 
 #. module: account
 #: help:account.tax,type:0
@@ -6552,7 +6552,7 @@ msgstr "会計年度"
 #. module: account
 #: view:account.move.reconcile:0
 msgid "Partial Reconcile Entries"
-msgstr "部分消し込みエントリー"
+msgstr "部分消込エントリ"
 
 #. module: account
 #: view:account.aged.trial.balance:0
@@ -6591,7 +6591,7 @@ msgstr "部分消し込みエントリー"
 #: view:validate.account.move:0
 #: view:validate.account.move.lines:0
 msgid "Cancel"
-msgstr "キャンセル"
+msgstr "取消"
 
 #. module: account
 #: selection:account.account,type:0
@@ -6800,8 +6800,7 @@ msgid ""
 "year. Note that you can run this wizard many times for the same fiscal year: "
 "it will simply replace the old opening entries with the new ones."
 msgstr ""
-"このウィザードは選択した会計年度の年度仕訳帳項目の終わりを生成します。このウィザードは同じ会計年度で何度も実行できることに注意して下さい：これは単純に古い"
-"開始エントリーを新しいもので置き換えます。"
+"選択した新会計年度の期初仕訳を生成します。このウィザードは同じ会計年度で何度でも実行可能です（前回の実行で生成された期初仕訳が上書きされます）。"
 
 #. module: account
 #: model:ir.ui.menu,name:account.menu_finance_bank_and_cash
@@ -7229,7 +7228,7 @@ msgstr ""
 #: code:addons/account/report/common_report_header.py:67
 #, python-format
 msgid "All Entries"
-msgstr "全エントリー"
+msgstr "全エントリ"
 
 #. module: account
 #: constraint:account.move.reconcile:0
@@ -7521,7 +7520,7 @@ msgstr "この請求書を本当に開きますか？"
 #. module: account
 #: field:account.chart.template,property_account_expense_opening:0
 msgid "Opening Entries Expense Account"
-msgstr "期初エントリ費用勘定"
+msgstr "期初仕訳費用勘定"
 
 #. module: account
 #: view:account.invoice:0
@@ -7639,7 +7638,7 @@ msgstr "デフォルト消費税（仕入）"
 #. module: account
 #: field:account.chart.template,property_account_income_opening:0
 msgid "Opening Entries Income Account"
-msgstr "損益勘定の開始エントリー"
+msgstr "期初仕訳収益勘定"
 
 #. module: account
 #: field:account.config.settings,group_proforma_invoices:0
@@ -7668,7 +7667,7 @@ msgstr "請求書参照"
 #. module: account
 #: field:account.fiscalyear.close,report_name:0
 msgid "Name of new entries"
-msgstr "新エントリーの名前"
+msgstr "生成仕訳名称"
 
 #. module: account
 #: view:account.use.model:0
@@ -7822,7 +7821,7 @@ msgstr "プロフォーマ"
 #: view:account.move.line:0
 #: selection:account.move.line,state:0
 msgid "Unbalanced"
-msgstr "アンバランス"
+msgstr "貸借不一致"
 
 #. module: account
 #: selection:account.move.line,centralisation:0
@@ -7965,7 +7964,7 @@ msgstr "閉じる会計年度"
 #: view:account.invoice.cancel:0
 #: model:ir.actions.act_window,name:account.action_account_invoice_cancel
 msgid "Cancel Selected Invoices"
-msgstr "選択請求書のキャンセル"
+msgstr "選択請求書を取消"
 
 #. module: account
 #: help:account.account.type,report_type:0
@@ -8324,7 +8323,7 @@ msgstr "アカウントエントリー行は有効な状態ではありません
 #. module: account
 #: field:account.account.type,close_method:0
 msgid "Deferral Method"
-msgstr "繰延法"
+msgstr "繰越方法"
 
 #. module: account
 #: model:process.node,note:account.process_node_electronicfile0
@@ -8406,7 +8405,7 @@ msgstr "請求書の状態は開いています。"
 #: field:account.subscription,state:0
 #: field:report.invoice.created,state:0
 msgid "Status"
-msgstr "状態"
+msgstr "ステータス"
 
 #. module: account
 #: report:account.analytic.account.cost_ledger:0
@@ -8631,7 +8630,7 @@ msgstr "仕訳項目が関連取引先と係争状態にあることを示すに
 #: field:account.move.line,reconcile_partial_id:0
 #: view:account.move.line.reconcile:0
 msgid "Partial Reconcile"
-msgstr "部分消し込み"
+msgstr "部分消込"
 
 #. module: account
 #: model:ir.model,name:account.model_account_analytic_inverted_balance
@@ -9148,7 +9147,7 @@ msgstr "不明"
 #: code:addons/account/account.py:3198
 #, python-format
 msgid "Opening Entries Journal"
-msgstr "仕訳帳の開始エントリー"
+msgstr "期初仕訳帳"
 
 #. module: account
 #: model:process.transition,note:account.process_transition_customerinvoice0
@@ -9533,7 +9532,7 @@ msgstr "表示アカウント"
 #: model:account.account.type,name:account.data_account_type_payable
 #: selection:account.entries.report,type:0
 msgid "Payable"
-msgstr "買掛金"
+msgstr "支払対象"
 
 #. module: account
 #: view:account.account:0
