--- a/mail/i18n/ja.po
+++ b/mail/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-05 01:36+0000\n"
+"PO-Revision-Date: 2013-11-07 08:08+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-08 06:26+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: mail
@@ -268,7 +268,7 @@ msgstr "受信済"
 #: code:addons/mail/static/src/xml/mail.xml:71
 #, python-format
 msgid "Attach a File"
-msgstr ""
+msgstr "ファイルを添付"
 
 #. module: mail
 #: view:mail.mail:0
@@ -501,7 +501,7 @@ msgstr "パートナ"
 #. module: mail
 #: model:ir.ui.menu,name:mail.mail_my_stuff
 msgid "Organizer"
-msgstr ""
+msgstr "オーガナイザ"
 
 #. module: mail
 #: field:mail.compose.message,subject:0
@@ -604,7 +604,7 @@ msgstr "アーカイブ"
 #. module: mail
 #: view:mail.compose.message:0
 msgid "Subject..."
-msgstr ""
+msgstr "件名..."
 
 #. module: mail
 #. openerp-web
@@ -823,7 +823,7 @@ msgstr "キャンセル"
 #: code:addons/mail/static/src/xml/mail.xml:47
 #, python-format
 msgid "Share with my followers..."
-msgstr ""
+msgstr "自分のフォロワーとシェア..."
 
 #. module: mail
 #: field:mail.notification,partner_id:0
@@ -1280,7 +1280,7 @@ msgstr ""
 #: view:mail.compose.message:0
 #: view:mail.wizard.invite:0
 msgid "Add contacts to notify..."
-msgstr ""
+msgstr "連絡先を追加..."
 
 #. module: mail
 #: view:mail.group:0
