--- a/crm_partner_assign/i18n/sl.po
+++ b/crm_partner_assign/i18n/sl.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-03-07 08:38+0000\n"
-"PO-Revision-Date: 2013-10-24 10:38+0000\n"
+"PO-Revision-Date: 2013-11-09 11:33+0000\n"
 "Last-Translator: Darja Zorman <darja.zorman@mentis.si>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-25 06:00+0000\n"
-"X-Generator: Launchpad (build 16810)\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,delay_close:0
 msgid "Delay to Close"
-msgstr ""
+msgstr "Zamuda pri končanju"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,author_id:0
@@ -128,7 +128,7 @@ msgstr "Prodajalec"
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,priority:0
 msgid "Highest"
-msgstr ""
+msgstr "Najvišja"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -139,12 +139,12 @@ msgstr "Dan"
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,message_id:0
 msgid "Message unique identifier"
-msgstr ""
+msgstr "Enoličen identifikator sporočila"
 
 #. module: crm_partner_assign
 #: field:res.partner,date_review_next:0
 msgid "Next Partner Review"
-msgstr ""
+msgstr "Naslednji pregled partnerja"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,history_mode:0
@@ -155,7 +155,7 @@ msgstr "Zadnja E-pošta"
 #: field:crm.lead,partner_latitude:0
 #: field:res.partner,partner_latitude:0
 msgid "Geo Latitude"
-msgstr ""
+msgstr "Geografska širina"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,state:0
@@ -165,7 +165,7 @@ msgstr "Preklicano"
 #. module: crm_partner_assign
 #: view:crm.lead:0
 msgid "Geo Assignation"
-msgstr ""
+msgstr "Geografska dodelitev"
 
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_crm_lead_forward_to_partner
@@ -175,12 +175,12 @@ msgstr "Čarovnik za sestavljanje e-pošte"
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,turnover:0
 msgid "Turnover"
-msgstr ""
+msgstr "Prihodek"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,date_closed:0
 msgid "Close Date"
-msgstr ""
+msgstr "Datum zaključka"
 
 #. module: crm_partner_assign
 #: help:res.partner,partner_weight:0
@@ -188,27 +188,29 @@ msgid ""
 "Gives the probability to assign a lead to this partner. (0 means no "
 "assignation.)"
 msgstr ""
+"Možnost verjetnosti prireditve možnosti temu partnerju. (0 pomeni, da "
+"priredbe ni)"
 
 #. module: crm_partner_assign
 #: view:res.partner:0
 msgid "Partner Activation"
-msgstr ""
+msgstr "Aktiviranje partnerja"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,type:0
 msgid "System notification"
-msgstr ""
+msgstr "Sistemsko sporočilo"
 
 #. module: crm_partner_assign
 #: code:addons/crm_partner_assign/wizard/crm_forward_to_partner.py:74
 #, python-format
 msgid "Lead forward"
-msgstr ""
+msgstr "Posreduj možnost"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,probability:0
 msgid "Avg Probability"
-msgstr ""
+msgstr "Povprečna verjetnost"
 
 #. module: crm_partner_assign
 #: view:res.partner:0
@@ -231,13 +233,13 @@ msgstr "Od"
 #: model:ir.ui.menu,name:crm_partner_assign.menu_res_partner_grade_action
 #: view:res.partner.grade:0
 msgid "Partner Grade"
-msgstr ""
+msgstr "Stopnja partnerja"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 #: view:crm.partner.report.assign:0
 msgid "Section"
-msgstr ""
+msgstr "Oddelek"
 
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
@@ -258,7 +260,7 @@ msgstr "Prioriteta"
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,delay_expected:0
 msgid "Overpassed Deadline"
-msgstr ""
+msgstr "Presežen končni rok"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,type:0
@@ -274,17 +276,17 @@ msgstr "E-pošta"
 #. module: crm_partner_assign
 #: help:crm.lead,partner_assigned_id:0
 msgid "Partner this case has been forwarded/assigned to."
-msgstr ""
+msgstr "Ta primer je bil posredovan/dodeljen."
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,priority:0
 msgid "Lowest"
-msgstr ""
+msgstr "Najnižja"
 
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
 msgid "Date Invoice"
-msgstr ""
+msgstr "Datum računa"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,template_id:0
@@ -294,12 +296,12 @@ msgstr "Predloga"
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 msgid "Assign Date"
-msgstr ""
+msgstr "Datum prireditve"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 msgid "Leads Analysis"
-msgstr ""
+msgstr "Analiza možnosti"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,creation_date:0
@@ -309,7 +311,7 @@ msgstr "Ustvarjeno dne"
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_res_partner_activation
 msgid "res.partner.activation"
-msgstr ""
+msgstr "res.partner.activation"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,parent_id:0
@@ -319,7 +321,7 @@ msgstr "Nadrejeno sporočilo"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,res_id:0
 msgid "Related Document ID"
-msgstr ""
+msgstr "ID povezanega dokumenta"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,state:0
@@ -329,12 +331,12 @@ msgstr "Na čakanju"
 #. module: crm_partner_assign
 #: view:crm.lead:0
 msgid "Partner Assignation"
-msgstr ""
+msgstr "Dodelitev partnerja"
 
 #. module: crm_partner_assign
 #: help:crm.lead.report.assign,type:0
 msgid "Type is used to separate Leads and Opportunities"
-msgstr ""
+msgstr "Tip se uporablja za ločevanje možnosti in priložnosti"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,month:0
@@ -344,7 +346,7 @@ msgstr "Julij"
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
 msgid "Date Review"
-msgstr ""
+msgstr "Datum pregleda"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -361,24 +363,24 @@ msgstr "Status"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,to_read:0
 msgid "To read"
-msgstr ""
+msgstr "Prebrati"
 
 #. module: crm_partner_assign
 #: code:addons/crm_partner_assign/wizard/crm_forward_to_partner.py:74
 #, python-format
 msgid "Fwd"
-msgstr ""
+msgstr "Posredovanje"
 
 #. module: crm_partner_assign
 #: view:res.partner:0
 msgid "Geo Localization"
-msgstr ""
+msgstr "Geo Lokalizacija"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 #: view:crm.partner.report.assign:0
 msgid "Opportunities Assignment Analysis"
-msgstr ""
+msgstr "Analiza prireditve priložnosti"
 
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
@@ -389,7 +391,7 @@ msgstr "Prekliči"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,history_mode:0
 msgid "Send history"
-msgstr ""
+msgstr "Zgodovina pošiljanja"
 
 #. module: crm_partner_assign
 #: view:res.partner:0
