--- a/marketing/i18n/ja.po
+++ b/marketing/i18n/ja.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-08 08:37+0000\n"
+"Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:08+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: marketing
 #: model:ir.model,name:marketing.model_marketing_config_settings
 msgid "marketing.config.settings"
-msgstr ""
+msgstr "marketing.config.settings"
 
 #. module: marketing
 #: help:marketing.config.settings,module_marketing_campaign_crm_demo:0
@@ -34,13 +34,13 @@ msgstr ""
 #: model:ir.actions.act_window,name:marketing.action_marketing_configuration
 #: view:marketing.config.settings:0
 msgid "Configure Marketing"
-msgstr ""
+msgstr "マーケティング設定調整"
 
 #. module: marketing
 #: view:crm.lead:0
 #: model:ir.ui.menu,name:marketing.menu_marketing_configuration
 msgid "Marketing"
-msgstr ""
+msgstr "マーケティング"
 
 #. module: marketing
 #: field:marketing.config.settings,module_marketing_campaign:0
