--- a/procurement/i18n/hr.po
+++ b/procurement/i18n/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-11-05 12:08+0000\n"
+"PO-Revision-Date: 2013-11-09 13:37+0000\n"
 "Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: procurement
@@ -42,6 +42,9 @@ msgid ""
 "under 0. You should probably not use this option, we suggest using a MTO "
 "configuration on products."
 msgstr ""
+"Pokreće automatsku radnju nabave za sve proizvode kojima je virtualna zaliha "
+"ispod nule. Vrlo vjerovatno ne trebate koristiti ovu opciju, poredlažemo da "
+"koristite metodu nabave 'Po narudžbi (MTO)' u matičnom kartonu artikla."
 
 #. module: procurement
 #: view:stock.warehouse.orderpoint:0
@@ -242,7 +245,7 @@ msgstr "Spremno"
 #. module: procurement
 #: field:procurement.order.compute.all,automatic:0
 msgid "Automatic orderpoint"
-msgstr ""
+msgstr "Automatsko naručivanje"
 
 #. module: procurement
 #: model:ir.actions.act_window,help:procurement.procurement_exceptions
@@ -261,6 +264,21 @@ msgid ""
 "                </p>\n"
 "            "
 msgstr ""
+"<p>\n"
+"                Nabavka predstavlja potrebu za određenom količinom proizvoda "
+"u određeno vrijeme na određenoj lokaciji. Prodajni nalozi su tipičan izvor "
+"Nabavki (iako su to odvojeni dokumenti). Ovisno o parametrima nabavke i "
+"konfiguraciji proizvoda, modul Nabavke će pokušati zadovoljiti potrebu za "
+"rezerviranjem količina na zalihi, naručivanjem proizvoda od dobavljača (u MK "
+"artikla mora biti upisan dobavljač), ili prosljeđivanja proizvodnog naloga i "
+"sl. Izuzetak u nabavci pojavljuje se kada sustav ne može pronaći način za "
+"izvršenje nabavke. Neki izuzetci će se automatski riješiti, ali neki "
+"zahtjevaju ručnu intervenciju (to su oni koji imaju određenu poruku sa "
+"greškom). Primjer neke od mogućih grešaka je nabavka artikala koji u "
+"matičnom kartonu nemaju upisanog dobavljača, pa sustav nezna za kojeg "
+"dobavljača da napravi Nalog za nabavu\n"
+"                </p>\n"
+"            "
 
 #. module: procurement
 #: selection:procurement.order,state:0
@@ -1018,7 +1036,7 @@ msgstr "Vrlo hitno"
 #. module: procurement
 #: field:procurement.orderpoint.compute,automatic:0
 msgid "Automatic Orderpoint"
-msgstr ""
+msgstr "Automatsko naručivanje"
 
 #. module: procurement
 #: help:procurement.order,message_ids:0
