--- a/product/i18n/nl.po
+++ b/product/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-11-06 20:46+0000\n"
-"Last-Translator: Stefan Rijnhart (Therp) <Unknown>\n"
+"PO-Revision-Date: 2013-11-08 09:47+0000\n"
+"Last-Translator: Erwin van der Ploeg (BAS Solutions) <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-07 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: product
@@ -1948,7 +1948,7 @@ msgstr "Switch, 24 ports"
 #. module: product
 #: selection:product.uom,uom_type:0
 msgid "Bigger than the reference Unit of Measure"
-msgstr "Goter en de referentie maateenheid."
+msgstr "Groter dan de referentie maateenheid."
 
 #. module: product
 #: model:product.template,name:product.product_product_consultant_product_template
