--- a/purchase_requisition/i18n/fi.po
+++ b/purchase_requisition/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-11-05 02:34+0000\n"
+"PO-Revision-Date: 2013-11-08 19:02+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:45+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: purchase_requisition
@@ -70,7 +70,7 @@ msgstr "Tila"
 #. module: purchase_requisition
 #: view:purchase.requisition:0
 msgid "Send to Suppliers"
-msgstr ""
+msgstr "Lähetä toimittajille"
 
 #. module: purchase_requisition
 #: view:purchase.requisition:0
@@ -431,7 +431,7 @@ msgstr ""
 #. module: purchase_requisition
 #: report:purchase.requisition:0
 msgid "Product UoM"
-msgstr "Tuotteen mittayksikkö"
+msgstr "Tuotteen yksikkö"
 
 #. module: purchase_requisition
 #: code:addons/purchase_requisition/purchase_requisition.py:134
