--- a/sale/i18n/fi.po
+++ b/sale/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-01 04:56+0000\n"
-"Last-Translator: Harri Luuppala <Unknown>\n"
+"PO-Revision-Date: 2013-11-08 19:07+0000\n"
+"Last-Translator: Mikko Salmela <salmemik@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-02 06:23+0000\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:45+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: sale
@@ -25,7 +25,7 @@ msgstr ""
 #. module: sale
 #: view:sale.order:0
 msgid "UoS"
-msgstr "Myyntiyksikkö"
+msgstr "my"
 
 #. module: sale
 #: report:sale.order:0
@@ -279,7 +279,7 @@ msgstr "Salli hälytysten määrittely asiakkaille tai tuotteille"
 #. module: sale
 #: field:sale.shop,name:0
 msgid "Shop Name"
-msgstr "Myymälän nimi"
+msgstr "Toimipaikan nimi"
 
 #. module: sale
 #: code:addons/sale/sale.py:598
@@ -611,7 +611,7 @@ msgstr "Laskutusosoite:"
 #. module: sale
 #: field:sale.order.line,product_uom:0
 msgid "Unit of Measure "
-msgstr "Mittayksikkö "
+msgstr "Yksikkö "
 
 #. module: sale
 #: field:sale.config.settings,time_unit:0
@@ -867,6 +867,16 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa määritelläksesi uusi toimipaikka.\n"
+"              </p><p>\n"
+"                Jokainen tarjous tai myyntitilaus pitää kytkeä "
+"toimipaikkaan. \n"
+"                Toimipaikka määrittelee samalla varaston, josta myydyt "
+"tuotteet\n"
+"                toimitetaan.\n"
+"              </p>\n"
+"            "
 
 #. module: sale
 #: field:sale.order,message_is_follower:0
@@ -892,7 +902,7 @@ msgstr "Poikkeus"
 #: model:ir.model,name:sale.model_sale_shop
 #: view:sale.shop:0
 msgid "Sales Shop"
-msgstr "Myymälä"
+msgstr "Toimipaikka"
 
 #. module: sale
 #: help:sale.advance.payment.inv,product_id:0
@@ -1130,7 +1140,7 @@ msgstr "Odottaa aikataulua"
 #: view:sale.order.line:0
 #: field:sale.report,product_uom:0
 msgid "Unit of Measure"
-msgstr "Mittayksikkö"
+msgstr "Yksikkö"
 
 #. module: sale
 #: field:sale.order.line,type:0
@@ -1366,8 +1376,7 @@ msgstr "Käytä hinnastoja valitaksesi asiakaskohtaisen hinnan"
 #: code:addons/sale/sale.py:185
 #, python-format
 msgid "There is no default shop for the current user's company!"
-msgstr ""
-"Valitun käyttäjän yrityksellä ei ole oletusarvoista liikettä/toimipistettä."
+msgstr "Valitun käyttäjän yrityksellä ei ole oletusarvoista toimipaikkaa."
 
 #. module: sale
 #: code:addons/sale/sale.py:277
@@ -1577,7 +1586,7 @@ msgstr "Tilauspäivämäärä"
 #. module: sale
 #: field:sale.order.line,product_uos:0
 msgid "Product UoS"
-msgstr "Tuotteen myyntiyksikkö"
+msgstr "Tuotteen my"
 
 #. module: sale
 #: selection:sale.report,state:0
@@ -1801,7 +1810,7 @@ msgstr "Sähköpostin automaattinen koostaminen"
 #: view:sale.report:0
 #: field:sale.report,shop_id:0
 msgid "Shop"
-msgstr "Myymälä"
+msgstr "Toimipaikka"
 
 #. module: sale
 #: field:sale.report,date_confirm:0
@@ -1836,7 +1845,7 @@ msgstr "Myyntitilaus"
 #. module: sale
 #: field:sale.order.line,product_uos_qty:0
 msgid "Quantity (UoS)"
-msgstr "Määrä (myyntiyksikkö)"
+msgstr "määrä (my)"
 
 #. module: sale
 #: selection:sale.order.line,state:0
@@ -1905,7 +1914,7 @@ msgstr ""
 #. module: sale
 #: view:sale.report:0
 msgid "Reference Unit of Measure"
-msgstr ""
+msgstr "Referenssiyksikkö"
 
 #. module: sale
 #: view:sale.order.line:0
