--- a/stock/i18n/hr.po
+++ b/stock/i18n/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-07 14:04+0000\n"
-"Last-Translator: Krešimir Jeđud <kresimir.jedud@infokom.hr>\n"
+"PO-Revision-Date: 2013-11-09 12:14+0000\n"
+"Last-Translator: Dejan Radočaj <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-08 06:26+0000\n"
+"X-Launchpad-Export-Date: 2013-11-10 06:45+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: stock
@@ -212,7 +212,7 @@ msgstr "Analiza perioda"
 #: view:report.stock.move:0
 #: field:stock.change.standard.price,stock_journal:0
 msgid "Stock journal"
-msgstr "Stock journal"
+msgstr "Dnevnik zalihe"
 
 #. module: stock
 #: view:report.stock.move:0
@@ -409,7 +409,7 @@ msgstr "Dozvoli potraživanje po isporuci"
 #. module: stock
 #: selection:stock.return.picking,invoice_state:0
 msgid "No invoicing"
-msgstr "No invoicing"
+msgstr "Bez kreiranja  fakture"
 
 #. module: stock
 #: view:stock.move:0
@@ -604,7 +604,7 @@ msgstr ""
 #: help:stock.picking.in,type:0
 #: help:stock.picking.out,type:0
 msgid "Shipping type specify, goods coming in or going out."
-msgstr "Shipping type specify, goods coming in or going out."
+msgstr "Tip robnog prometa definira da li dobra dolaze ili odlaze"
 
 #. module: stock
 #: model:ir.actions.act_window,help:stock.action_picking_tree6
@@ -1578,7 +1578,7 @@ msgstr "Spoji inventure"
 #. module: stock
 #: selection:stock.return.picking,invoice_state:0
 msgid "To be refunded/invoiced"
-msgstr "To be refunded/invoiced"
+msgstr "Kreiraj fakturu"
 
 #. module: stock
 #: code:addons/stock/stock.py:2448
@@ -1699,7 +1699,7 @@ msgstr "Skladište"
 #. module: stock
 #: view:report.stock.move:0
 msgid "Type"
-msgstr "Vrsta"
+msgstr "Tip robnog prometa"
 
 #. module: stock
 #: model:stock.location,name:stock.stock_location_5
@@ -2507,7 +2507,7 @@ msgstr "Konto skladišnog ulaza"
 #. module: stock
 #: view:report.stock.move:0
 msgid "Shipping type specify, goods coming in or going out"
-msgstr ""
+msgstr "Tip robnog prometa definira da li dobra dolaze ili odlaze"
 
 #. module: stock
 #: view:stock.config.settings:0
@@ -2699,7 +2699,7 @@ msgstr "Value"
 #: field:stock.picking.in,type:0
 #: field:stock.picking.out,type:0
 msgid "Shipping Type"
-msgstr "Tip otpreme"
+msgstr "Tip robnog prometa"
 
 #. module: stock
 #: view:stock.move:0
@@ -3597,7 +3597,7 @@ msgstr ""
 #. module: stock
 #: view:stock.return.picking:0
 msgid "Return"
-msgstr "Return"
+msgstr "Potvrdi"
 
 #. module: stock
 #: field:stock.return.picking,invoice_state:0
@@ -5074,9 +5074,9 @@ msgid ""
 "empty to automatically detect the type based on the source and destination "
 "locations)."
 msgstr ""
-"Shipping Type of the Picking List that will contain the chained move (leave "
-"empty to automatically detect the type based on the source and destination "
-"locations)."
+"Tip robnog prometa od skladišnice koja će sadržavati ulančani promet "
+"(ostaviti prazno da sustav automatski detektira tip na bazi polazne i "
+"odredišne lokacije)."
 
 #. module: stock
 #: code:addons/stock/wizard/stock_partial_picking.py:192
